# oidc-auth-armada-app

./: .gitignore  .gitreview  .zuul.yaml  centos_iso_image.inc  centos_pkg_dirs  centos_pkg_dirs_containers  centos_stable_docker_images.inc  centos_stable_wheels.inc  centos_tarball-dl.lst  debian_bullseye_iso_image_std.inc  debian_bullseye_pkg_dirs_std  debian_pkg_dirs  debian_stable_docker_images.inc  test-requirements.txt  tox.ini
dex-helm/centos/: build_srpm.data  dex-helm.spec
dex-helm/debian/: dl_hook  meta_data.yaml
dex-helm/files/: 0002-add-image-pull-secrets.patch  0004-Automatically-roll-deployments.patch  0005-Update-Dex-chart-for-Helm-v3.patch  0006-Create-new-config-value-extraStaticClients.patch  0007-Add-tolerance-in-dex-helm-chart.patch  0008-fix-deployment-nodePorts-for-helmv3.patch
dex/centos/: dex.stable_docker_image
oidc-auth-tools/centos/: build_srpm.data  oidc-auth-tools.spec
oidc-auth-tools/debian/: meta_data.yaml
oidc-auth-tools/oidcauthtools/: setup.cfg  setup.py
oidc-auth-tools/oidcauthtools/oidcauthtools/: __init__.py  oidc_auth.py
python-k8sapp-oidc/centos/: build_srpm.data  python-k8sapp-oidc.spec
python-k8sapp-oidc/debian/: meta_data.yaml
python-k8sapp-oidc/k8sapp_oidc/: .gitignore  README.rst  pylint.rc  setup.cfg  test-requirements.txt  tox.ini  upper-constraints.txt
python3-k8sapp-oidc/debian/: meta_data.yaml
python3-k8sapp-oidc/k8sapp_oidc/: .stestr.conf  pylint.rc  requirements.txt  setup.cfg  setup.py  tox.ini
python3-k8sapp-oidc/k8sapp_oidc/k8sapp_oidc/common/: constants.py
python3-k8sapp-oidc/k8sapp_oidc/k8sapp_oidc/helm/: dex.py  dex_base.py  oidc_client.py
python3-k8sapp-oidc/k8sapp_oidc/k8sapp_oidc/lifecycle/: lifecycle_oidc.py
python3-k8sapp-oidc/k8sapp_oidc/k8sapp_oidc/tests/: test_dex.py  test_lifecycle_oidc.py  test_oidc_client.py  test_oidc_tls.py  test_plugins.py
stx-oidc-auth-helm/centos/: build_srpm.data  stx-oidc-auth-helm.spec
stx-oidc-auth-helm/debian/: dl_hook  meta_data.yaml
stx-oidc-auth-helm/files/: 0001-Update-Dex-chart-for-Kubernetes-API-1.16.patch  manifest.yaml
stx-oidc-client/centos/: build_srpm.data
stx-oidc-client/debian/: stx-oidc-client.stable_docker_image
(+103 files in other folders)
