[metadata]
license_files = LICENSE
name = oidcauthtools
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oidcauthtools
install_requires =
    mechanize

[entry_points]
console_scripts =
    oidc-auth=oidcauthtools.oidc_auth:main

[nosetests]
cover-erase = true
verbosity = 2

[bdist_wheel]
universal = 1
