[metadata]
name = k8sapp-oidc
summary = StarlingX sysinv extensions for oidc-auth-apps
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_oidc

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    oidc-auth-apps = systemconfig.helm_plugins.oidc_auth_apps

systemconfig.helm_plugins.oidc_auth_apps =
    001_dex = k8sapp_oidc.helm.dex:Dex
    002_oidc-client = k8sapp_oidc.helm.oidc_client:OidcClientHelm
    003_secret-observer = k8sapp_oidc.helm.secret_observer:SecretObserverHelm

systemconfig.app_lifecycle =
    oidc-auth-apps = k8sapp_oidc.lifecycle.lifecycle_oidc:OidcAppLifecycleOperator

[bdist_wheel]
universal = 1
